# MCP_Server5

./: .dockerignore  .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  PromptGuide.txt  QUICKSTART.md  README.md  cloudbuild.yaml  debug_routes.py  debug_server_check.py  docker-compose.yml  inspect_app.py  inspect_mcp_obj.py  prd.md  pyproject.toml  test_server.py
docs/: Optimization.md  PromptGuide.txt  QUICKSTART.md  apis.md  runbook.md
examples/: answer_question_request.json  answer_question_response.json  award_search_request.json  award_search_response.json  bootstrap_catalog_request.json  bootstrap_catalog_response.json  error_response.json  spending_rollups_request.json  spending_rollups_response.json
mock_usaspending/: Dockerfile  app.py
mock_usaspending/fixtures/: award_types.json  sample_award_detail_contract.json  sample_award_detail_grant.json  sample_awards.json  sample_idv_orders.json  sample_recipient.json  sample_transactions.json  toptier_agencies.json
scripts/: bootstrap_gcp.sh  deploy_cloud_run.sh  get_service_url.sh  smoke_test_cloud_run.sh
src/usaspending_mcp/: award_types.py  cache.py  endpoint_map.py  http_app.py  logging_config.py  response.py  router.py  router_rules.json  server.py  stdio_server.py  usaspending_client.py
tests/: test_award_types.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_design_decisions.py  test_endpoint_map.py  test_golden_questions.py  test_logging.py  test_mock_server.py  test_response.py  test_router.py  test_server_setup.py  test_success_metrics.py
(+21 files in other folders)
