[project]
name = "usaspending-mcp"
version = "0.1.0"
description = "MCP Server for USAspending.gov"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "tenacity>=8.2.0",
    "respx>=0.21.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "ruff>=0.3.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
usaspending-mcp = "usaspending_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "metrics: marks tests for success metrics validation",
]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=50"

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
